Add simple analytics script

--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,9 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    
+    <!-- 100% privacy friendly analytics --> 
+    <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script> 
+    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
   </body>
 </html>
