--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,46 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="/favicon.svg">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-    
-    <!-- 100% privacy friendly analytics --> 
-    <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script> 
-    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>geenio</title>
+
+  <!-- favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2" />
+  <link rel="manifest" href="/site.webmanifest?v=2" />
+  <link rel="mask-icon" href="/safari-pinned-tab.svg?v=2" color="#d25d5e" />
+  <link rel="shortcut icon" href="/favicon.ico?v=2" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="theme-color" content="#da532c" />
+
+  <!-- Social -->
+  <meta property="og:title" content="geenio: 5 perguntas todos os dias" />
+  <meta property="og:type" content="game" />
+  <meta property="og:image" content="https://geenio.bandeira.dev/social-cover.png" />
+  <meta property="og:url" content="https://geenio.bandeira.dev" />
+  <meta name="twitter:card" content="https://geenio.bandeira.dev/social-cover.png" />
+  <meta property="og:description"
+    content="Tente acertar todas as 5 perguntas. Todo dia, cinco novas perguntas estão disponíveis." />
+  <meta property="og:site_name" content="geenio" />
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+        properly without JavaScript enabled. Please enable it to
+        continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+
+  <!-- 100% privacy friendly analytics -->
+  <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+  <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""
+      referrerpolicy="no-referrer-when-downgrade" /></noscript>
+</body>
+
 </html>
