Fix twitter meta tag twitter:card

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <meta property="og:type" content="game" />
   <meta property="og:image" content="https://geenio.bandeira.dev/social-cover.png" />
   <meta property="og:url" content="https://geenio.bandeira.dev" />
-  <meta name="twitter:card" content="https://geenio.bandeira.dev/social-cover.png" />
+  <meta name="twitter:card" content="summary_large_image" />
   <meta property="og:description"
     content="Tente acertar todas as 5 perguntas. Todo dia, cinco novas perguntas estão disponíveis." />
   <meta property="og:site_name" content="geenio" />
